--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Welcome to My Portfolio</h1>
-        </header>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. I have a passion for technology and enjoy working on exciting projects. This website serves as a platform to display my work and connect with others.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <ul>
-                <li><a href="https://github.com/realadamnix/learn-python" target="_blank">learn-python</a> - Showcase of my Python programs.</li>
-                <li><a href="https://github.com/realadamnix/learn-cplusplus" target="_blank">learn-cplusplus</a> - Showcase of my C++ programs.</li>
-                <li><a href="https://github.com/realadamnix/java-programs" target="_blank">java-programs</a> - Showcase of my Java programs.</li>
-            </ul>  
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>                            
-            <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
-            <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
-        </section>
-        <footer>
-            <p>&copy; 2024 Adam's Portfolio</p>
-        </footer>
-    </div>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <button id="dark-mode-toggle">Toggle Dark Mode</button>
+        </nav>
+    </header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. I have a passion for technology and enjoy working on exciting projects. This website serves as a platform to display my work and connect with others.</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://github.com/realadamnix/learn-python" target="_blank">Project 1</a> - Showcase of my Python programs.</li>
+            <li><a href="https://github.com/realadamnix/learn-cplusplus" target="_blank">Project 2</a> - Showcase of my C++ programs.</li>
+            <li><a href="https://github.com/realadamnix/java-programs" target="_blank">Project 3</a> - Showcase of my Java programs.</li>
+        </ul>  
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>                            
+        <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
+        <p>Find me on <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Adam's Portfolio</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
