refactor: Update LinkedIn profile link in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="contact">
         <h2>Contact</h2>                            
         <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
-        <p>Find me on <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></p>
+        <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
     </section>
     <footer>
         <p>&copy; 2024 Adam's Portfolio</p>
