refactor: Update footer copyright text in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
     </section>
     <footer>
-        <p>&copy; 2024 Adam's Portfolio</p>
+        <p>&copy; 2024 Adam Nix</p>
     </footer>
     <script src="script.js"></script>
 </body>
