--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. I have a passion for technology and enjoy working on exciting projects. This website serves as a platform to display my work and connect with others.</p>
+        <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work.</p>
     </section>
     <section id="projects">
         <h2>Projects</h2>
