refactor: Update header and main section in index.html for improved navigation and layout

--- a/index.html
+++ b/index.html
@@ -8,28 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
-        <nav>
-            <button id="dark-mode-toggle">Toggle Dark Mode</button>
-        </nav>
+        <h1>Adam's Portfolio</h1>  
     </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://github.com/realadamnix/learn-python" target="_blank">Project 1</a> - Showcase of my Python programs.</li>
-            <li><a href="https://github.com/realadamnix/learn-cplusplus" target="_blank">Project 2</a> - Showcase of my C++ programs.</li>
-            <li><a href="https://github.com/realadamnix/java-programs" target="_blank">Project 3</a> - Showcase of my Java programs.</li>
-        </ul>  
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>                            
-        <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
-        <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
-    </section>
+    <main>
+        <div class="welcome-container">
+            <a href="about.html" class="welcome-box">About Me</a>
+            <a href="projects.html" class="welcome-box">My Projects</a>
+            <a href="contact.html" class="welcome-box">Contact me</a>
+        </div>
+    </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
