--- a/about.html
+++ b/about.html
@@ -11,10 +11,15 @@
         <h1>About Me</h1>
         <nav>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Menu</a>
+                    <div class="dropdown-content">
+                        <a href="index.html">Home</a>
+                        <a href="projects.html">Projects</a>
+                        <a href="about.html">About</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
@@ -22,6 +27,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work and connect with others.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
