refactor: Improve dropdown menu functionality and navigation in about.html, index.html, and contact.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="welcome-container">
             <a href="about.html" class="welcome-box">About Me</a>
             <a href="projects.html" class="welcome-box">My Projects</a>
-            <a href="contact.html" class="welcome-box">Contact me</a>
+            <a href="contact.html" class="welcome-box">Contact </a>
         </div>
     </main>
     <footer>
