--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,19 @@
     <header>
         <h1>Contact</h1>
         <nav>
+            <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
             <ul class="navbar">
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropbtn">Menu</a>
-                    <div class="dropdown-content">
-                        <a href="index.html">Home</a>
-                        <a href="projects.html">Projects</a>
-                        <a href="about.html">About</a>
-                        <a href="contact.html">Contact</a>
-                    </div>
-                </li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+            <div class="dropdown">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </div>
         </nav>
     </header>
     <main>
@@ -32,5 +34,10 @@
     <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
+    <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('.dropdown').classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
