refactor: Improve dropdown menu functionality and navigation in styles.css

--- a/about.html
+++ b/about.html
@@ -10,7 +10,13 @@
     <header>
         <h1>About Me</h1>
         <nav>
-            <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
+            <button class="menu-toggle">Menu</button>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
             <div class="dropdown">
                 <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
@@ -29,8 +35,13 @@
         <p>&copy; 2024 Adam Nix</p>
     </footer>
     <script>
-        document.querySelector('.menu-toggle').addEventListener('click', function() {
-            document.querySelector('.dropdown').classList.toggle('active');
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const dropdown = document.querySelector('.dropdown');
+
+            menuToggle.addEventListener('click', () => {
+                dropdown.classList.toggle('active');
+            });
         });
     </script>
 </body>
