--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,12 @@
         <h1>Projects</h1>
         <nav>
             <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
             <div class="dropdown">
                 <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
