--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me & Contact</title>
+    <title>Adam's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>Adam's Portfolio</h1>
         <nav>
-            <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
+            <button class="menu-toggle">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -26,10 +26,9 @@
         </nav>
     </header>
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work and connect with others.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Adam N
+        <div class="welcome-container">
+            <a href="about.html" class="welcome-box">About Me</a>
+            <a href="projects.html" class="welcome-box">Projects</a>
+            <a href="contact.html" class="welcome-box">Contact</a>
+        </div>
+    
