--- a/index.html
+++ b/index.html
@@ -31,4 +31,20 @@
             <a href="projects.html" class="welcome-box">Projects</a>
             <a href="contact.html" class="welcome-box">Contact</a>
         </div>
+        <footer>
+        <p>&copy; 2024 Adam Nix</p>
+    </footer>
+    </main>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const dropdown = document.querySelector('.dropdown');
+
+            menuToggle.addEventListener('click', () => {
+                dropdown.classList.toggle('active');
+            });
+        });
+    </script>
+</body>
+</html>
     
