refactor: Improve dropdown menu functionality and navigation in about.html, contact.html, index.html, and projects.html

--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,6 @@
     <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
-    <script>
-        document.querySelector('.menu-toggle').addEventListener('click', function() {
-            document.querySelector('.dropdown').classList.toggle('active');
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
