--- a/about.html
+++ b/about.html
@@ -32,17 +32,8 @@
         </section>
     </main>
     <footer>
+        <script src="script.js"></script>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const menuToggle = document.querySelector('.menu-toggle');
-            const dropdown = document.querySelector('.dropdown');
-
-            menuToggle.addEventListener('click', () => {
-                dropdown.classList.toggle('active');
-            });
-        });
-    </script>
 </body>
 </html>
