--- a/index.html
+++ b/index.html
@@ -34,17 +34,8 @@
         <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
+    <script src="script.js"></script>
     </main>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const menuToggle = document.querySelector('.menu-toggle');
-            const dropdown = document.querySelector('.dropdown');
-
-            menuToggle.addEventListener('click', () => {
-                dropdown.classList.toggle('active');
-            });
-        });
-    </script>
 </body>
 </html>
     
