refactor: Improve dropdown menu functionality and navigation

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam's Portfolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Adam's Portfolio</h1>
+        <h1>Home</h1>
         <nav>
             <button class="menu-toggle">Menu</button>
             <ul class="navbar">
@@ -26,16 +26,15 @@
         </nav>
     </header>
     <main>
-        <div class="welcome-container">
-            <a href="about.html" class="welcome-box">About Me</a>
+        <section class="welcome-container">
             <a href="projects.html" class="welcome-box">Projects</a>
+            <a href="about.html" class="welcome-box">About Me</a>
             <a href="contact.html" class="welcome-box">Contact</a>
-        </div>
-        <footer>
+        </section>
+    </main>
+    <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
     <script src="script.js"></script>
-    </main>
 </body>
 </html>
-    
