refactor: Improve dropdown menu functionality and navigation in contact.html, index.html, and projects.html

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Contact</h1>
         <nav>
-            <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
+            <button class="menu-toggle">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -27,6 +27,7 @@
     </header>
     <main>
         <section>
+            <h2>Contact</h2>
             <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
             <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
         </section>
