--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Projects</h1>
         <nav>
-            <button class="menu-toggle" onclick="document.querySelector('.dropdown').classList.toggle('active')">Menu</button>
+            <button class="menu-toggle">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
