refactor: Improve dropdown menu functionality and navigation in about.html, contact.html, index.html, and projects.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Home</h1>
+        <button id="dark-mode-toggle">Dark Mode</button>
         <nav>
             <button class="menu-toggle">Menu</button>
             <ul class="navbar">
@@ -38,4 +39,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-   
