refactor: Improve dropdown menu functionality and navigation in about.html, contact.html, index.html, and projects.html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>About Me</h1>
-        <button id="dark-mode-toggle">Dark Mode</button>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
             <button class="menu-toggle">Menu</button>
             <ul class="navbar">
