--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Contact</h1>
-        <button id="dark-mode-toggle">Dark Mode</button>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
             <button class="menu-toggle">Menu</button>
             <ul class="navbar">
