refactor: Improve dropdown menu functionality and navigation in styles.css

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section class="welcome-container">
-            <a href="projects.html" class="welcome-box">Projects</a>
-            <a href="about.html" class="welcome-box">About Me</a>
-            <a href="contact.html" class="welcome-box">Contact</a>
-        </section>
-    </main>
+    <div class="container">
+        <main>
+            <section class="welcome-container">
+                <a href="projects.html" class="welcome-box">Projects</a>
+                <a href="about.html" class="welcome-box">About Me</a>
+                <a href="contact.html" class="welcome-box">Contact</a>
+            </section>
+        </main>
+    </div>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
