refactor: Improve dropdown menu functionality and navigation in styles.css, about.html, contact.html, index.html, and projects.html

--- a/index.html
+++ b/index.html
@@ -11,30 +11,22 @@
         <h1>Home</h1>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
-            <button class="menu-toggle">Menu</button>
+            <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="dropdown">
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </div>
         </nav>
     </header>
-    <div class="container">
-        <main>
-            <section class="welcome-container">
-                <a href="projects.html" class="welcome-box">Projects</a>
-                <a href="about.html" class="welcome-box">About Me</a>
-                <a href="contact.html" class="welcome-box">Contact</a>
-            </section>
-        </main>
-    </div>
+    <main>
+        <section class="welcome-container">
+            <a href="projects.html" class="welcome-box">Projects</a>
+            <a href="about.html" class="welcome-box">About Me</a>
+            <a href="contact.html" class="welcome-box">Contact</a>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
     </footer>
