--- a/projects.html
+++ b/projects.html
@@ -11,19 +11,13 @@
         <h1>Projects</h1>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
-            <button class="menu-toggle">Menu</button>
+            <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="dropdown">
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </div>
         </nav>
     </header>
     <main>
@@ -41,4 +35,3 @@
     <script src="script.js"></script>
 </body>
 </html>
- 
