--- a/contact.html
+++ b/contact.html
@@ -11,19 +11,13 @@
         <h1>Contact</h1>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
-            <button class="menu-toggle">Menu</button>
+            <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="dropdown">
-                <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </div>
         </nav>
     </header>
     <main>
