--- a/about.html
+++ b/about.html
@@ -23,7 +23,17 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work and connect with others.</p>
+            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick.This website serves as a platform to display my work.</p>
+        </section>
+
+        <section class="instagram-section">
+            <h2>Follow Me on Instagram</h2>
+            <div class="instagram-widget">
+                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/_adam_nix_/" data-instgrm-version="14"></blockquote>
+                <script async src="//www.instagram.com/embed.js"></script>
+            </div>
+            <p>Stay updated with my latest posts and projects by following me on Instagram!</p>
+            <a href="https://www.instagram.com/_adam_nix_/" target="_blank">Visit my Instagram</a>
         </section>
     </main>
     <footer>
