refactor: Update about.html and styles.css for Instagram section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
         </nav>
     </header>
     <main>
-        <section class="welcome-container">
-            <a href="projects.html" class="welcome-box">Projects</a>
-            <a href="about.html" class="welcome-box">About Me</a>
-            <a href="contact.html" class="welcome-box">Contact</a>
-        </section>
+       <img src="/images/backround-immage.jpg" alt="networking-technology-background">
+       <img id="logo" src="images/logo.png" alt="logo">
+    <p id="logo-text">Welcome</p>
     </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
