--- a/projects.html
+++ b/projects.html
@@ -24,20 +24,20 @@
     <section class="welcome-container">
       <div class="welcome-box">
         <a href="https://github.com/realadamnix/learn-python" class="welcome-box">
-          <img src="Python.png" alt="learn-python" style="width: 40px; height: 40px;">
-          <h2>Showcase of Python Programs</h2>
+          <img src="/images/Python.png" alt="learn-python" style="width: 40px; height: 40px;">
+          <h2>Python Programs</h2>
         </a>
       </div>
       <div class="welcome-box">
         <a href="https://github.com/realadamnix/learn-cplusplus" class="welcome-box">
-          <img src="CPP.png" alt="learn-cplusplus" style="width: 40px; height: 40px;">
-          <h2>Showcase of C++ Programs</h2>
+          <img src="/images/CPP.png" alt="learn-cplusplus" style="width: 40px; height: 40px;">
+          <h2>C++ Programs</h2>
         </a>
       </div>
       <div class="welcome-box">
         <a href="https://github.com/realadamnix/java-programs" class="welcome-box" >
-          <img src="Java.png" alt="java-programs" style="width: 40px; height: 45px;">
-          <h2>Showcase of Java Programs</h2>
+          <img src="/images/Java.png" alt="java-programs" style="width: 40px; height: 45px;">
+          <h2>Java Programs</h2>
         </a>
       </div>
     </section>
