Update contact email address

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:adamnix2004@gmail.com">adamnix2004@gmail.com</a></p>
+            <p>You can reach me at <a href="mailto:adamnix.contact@gmail.com">adamnix.contact@gmail.com</a></p>
             <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
         </section>
     </main>
