refactor: Remove unnecessary code and add lazy loading for Spotify iframe in about.html

--- a/about.html
+++ b/about.html
@@ -33,6 +33,12 @@
                 <script async src="//www.instagram.com/embed.js"></script>
             </div>
             <a href="https://www.instagram.com/_adam_nix_/" target="_blank">Visit my Instagram</a>
+
+        </section>
+        <section id="Song of the month">
+            <h2>Song of the Month</h2>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6O7qFEXmLQcOsV37wrgJDz?utm_source=generator" width="100%" height="352" title="Song of the Month" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            
         </section>
     </main>
     <footer>
