refactor: Update about.html and styles.css for Instagram section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <main>
+        <section id = "hero-section">
        <img src="/images/backround-immage.jpg" alt="networking-technology-background">
        <img id="logo" src="images/logo.png" alt="logo">
     <p id="logo-text">Welcome</p>
