--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick.This website serves as a platform to display my work.</p>
+            <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work.</p>
         </section>
 
         <section class="instagram-section">
@@ -33,12 +33,11 @@
                 <script async src="//www.instagram.com/embed.js"></script>
             </div>
             <a href="https://www.instagram.com/_adam_nix_/" target="_blank">Visit my Instagram</a>
-
         </section>
-        <section id="Song of the month">
+
+        <section class="spotify-section">
             <h2>Song of the Month</h2>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6O7qFEXmLQcOsV37wrgJDz?utm_source=generator" width="100%" height="352" title="Song of the Month" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            
         </section>
     </main>
     <footer>
