Refactor CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         </nav>
     </header>
     <main>
-        <section id = "hero-section">
-       <img src="/images/backround-immage.jpg" alt="networking-technology-background">
-       <img id="logo" src="images/logo.png" alt="logo">
+        <section id="hero-section">
+            <div class="image-container">
+                <img src="/images/p1.jpg" alt="Home page">
+                <img src="/images/p2.jgp" alt="Home page">
+                <img src="/images/p3.jpg" alt="Home page">
+            </div>
+            <img id="logo" src="images/logo.png" alt="logo">
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
