--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="hero-section">
             <div class="image-container">
                 <img src="/images/p1.jpg" alt="Home page">
-                <img src="/images/p2.jgp" alt="Home page">
+                <img src="/images/p2.jpg" alt="Home page">
                 <img src="/images/p3.jpg" alt="Home page">
             </div>
             <img id="logo" src="images/logo.png" alt="logo">
