--- a/about.html
+++ b/about.html
@@ -25,20 +25,22 @@
             <h2>About Me</h2>
             <p>Hello! I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work.</p>
         </section>
-
-        <section class="instagram-section">
-            <h2>Follow Me on Instagram</h2>
-            <div class="instagram-widget">
-                <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/_adam_nix_/" data-instgrm-version="14"></blockquote>
-                <script async src="//www.instagram.com/embed.js"></script>
-            </div>
-            <a href="https://www.instagram.com/_adam_nix_/" target="_blank">Visit my Instagram</a>
-        </section>
-
-        <section class="spotify-section">
-            <h2>Song of the Month</h2>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4A8tKYA7gwZzQ4jVwIv1sv?utm_source=generator" width="100%" height="352" title="Song of the Month" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </section>
+    
+        <div class="media-wrapper">
+            <section class="instagram-section">
+                <h2>Follow Me on Instagram</h2>
+                <div class="instagram-widget">
+                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/_adam_nix_/" data-instgrm-version="14"></blockquote>
+                    <script async src="//www.instagram.com/embed.js"></script>
+                </div>
+                <a href="https://www.instagram.com/_adam_nix_/" target="_blank">Visit my Instagram</a>
+            </section>
+    
+            <section class="spotify-section">
+                <h2>Song of the Month</h2>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4A8tKYA7gwZzQ4jVwIv1sv?utm_source=generator" width="100%" height="352" title="Song of the Month" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
