--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <main>
         <section id="hero-section">
             <img id="logo" src="images/logo.png" alt="logo">
-        </section>
+            
+            <section id="cybermap-section">
+            <h2>Welcome to my website!</h2>
+                <iframe width="700" height="700" src="https://cybermap.kaspersky.com/en/widget/dynamic/dark" title="Cybermap" ></iframe>
+            </section>
     </main>
     <footer>
         <p>&copy; 2024 Adam Nix</p>
