--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,35 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Contact</h2>
+            <h2>Contact Information</h2>
             <p>You can reach me at <a href="mailto:adamnix.contact@gmail.com">adamnix.contact@gmail.com</a></p>
             <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
+        </section>
+
+        <section id="contact-form-section">
+            <h2>Contact Form</h2>
+            <form id="contact-form" action="https://script.google.com/macros/s/AKfycbw0sBEswu-mIWwc73ObNTXUB5x4uBg7SidWAL30zkUN5jqZKVf89431syu2Q9SStOlWdQ/exec" method="POST">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+                </div>
+                <button type="submit">Send</button>
+            </form>
+            
         </section>
     </main>
     <footer>
