Add contact form functionality and thank you page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
         <section id="contact-form-section">
             <h2>Contact Form</h2>
-            <form id="contact-form" action="https://script.google.com/macros/s/AKfycbw0sBEswu-mIWwc73ObNTXUB5x4uBg7SidWAL30zkUN5jqZKVf89431syu2Q9SStOlWdQ/exec" method="POST">
+            <form id="contact-form" action="https://script.google.com/macros/s/AKfycbw0sBEswu-mIWwc73ObNTXUB5x4uBg7SidWAL30zkUN5jqZKVf89431syu2Q9SStOlWdQ/exec" method="POST" onsubmit="return redirectThankYou();">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
