Refactor HTML structure by removing unnecessary elements and adding hero section

--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,9 @@
     </nav>
   </header>
   <main>
+    <section id="hero-section">
+      <img id="logo" src="images/logo.png" alt="logo">
+    </section>
     <section class="welcome-container">
       <div class="welcome-box">
         <a href="https://github.com/realadamnix/learn-python" class="welcome-box">
@@ -35,7 +38,7 @@
         </a>
       </div>
       <div class="welcome-box">
-        <a href="https://github.com/realadamnix/java-programs" class="welcome-box" >
+        <a href="https://github.com/realadamnix/java-programs" class="welcome-box">
           <img src="/images/Java.png" alt="java-programs" style="width: 40px; height: 45px;">
           <h2>Java Programs</h2>
         </a>
