Refactor header structure and styles across multiple pages; remove index.html and update thank you link

--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>Contact</h1>
+        <div class="header-container">
+            <h1>Contact</h1>
+            <img class="header-logo" src="images/logo.png" alt="logo">
+        </div>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
             <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="contact-info-section">
             <h2>Contact Information</h2>
             <p>You can reach me at <a href="mailto:adamnix.contact@gmail.com">adamnix.contact@gmail.com</a></p>
             <p>Find me on <a href="https://www.linkedin.com/in/adam-nix-48a466253/" target="_blank">LinkedIn</a></p>
