--- a/projects.html
+++ b/projects.html
@@ -8,22 +8,23 @@
 </head>
 <body>
   <header>
-    <h1>Projects</h1>
+    <div class="header-container">
+        <h1>Projects</h1>
+        <img class="header-logo" src="images/logo.png" alt="logo">
+    </div>
     <button id="dark-mode-toggle">Toggle Dark Mode</button>
     <nav>
-      <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
-      <ul class="navbar">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+        <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
+        <ul class="navbar">
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
-  </header>
-  <main>
-    <section id="hero-section">
-      <img id="logo" src="images/logo.png" alt="logo">
-    </section>
+</header>
+
+
+<main>
     <section class="welcome-container">
       <div class="welcome-box">
         <a href="https://github.com/realadamnix/learn-python" class="welcome-box">
