--- a/about.html
+++ b/about.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <div class="header-container">
+            <h1>About</h1>
+            <img class="header-logo" src="images/logo.png" alt="logo">
+        </div>
         <button id="dark-mode-toggle">Toggle Dark Mode</button>
         <nav>
             <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
