--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@
         <section id="thank-you">
             <h2>Your request has been submitted successfully!</h2>
             <p>I appreciate your feedback and will get back to you shortly.</p>
-            <a href="index.html">Return to Home</a>
+            <a href="projects.html">Return back</a>
         </section>
     </main>
     <footer>
