--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <nav>
             <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
             <ul class="navbar">
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
