--- a/index.html
+++ b/index.html
@@ -1,53 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="header-container">
-        <h1>Projects</h1>
-        <img class="header-logo" src="images/logo.png" alt="logo">
-    </div>
-    <button id="dark-mode-toggle">Toggle Dark Mode</button>
-    <nav>
-        <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
-        <ul class="navbar">
-            <li><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Adam Nix</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item ms-2">
+                        <button id="dark-mode-toggle" class="btn btn-sm btn-outline-light">
+                            Light Mode
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-</header>
+    </header>
 
-<main>
-    <section class="welcome-container">
-      <div class="welcome-box">
-        <a href="https://github.com/realadamnix/learn-python" class="welcome-box">
-          <img src="/images/Python.png" alt="learn-python" style="width: 40px; height: 40px;">
-          <h2>Python Programs</h2>
-        </a>
-      </div>
-      <div class="welcome-box">
-        <a href="https://github.com/realadamnix/learn-cplusplus" class="welcome-box">
-          <img src="/images/CPP.png" alt="learn-cplusplus" style="width: 40px; height: 40px;">
-          <h2>C++ Programs</h2>
-        </a>
-      </div>
-      <div class="welcome-box">
-        <a href="https://github.com/realadamnix/java-programs" class="welcome-box">
-          <img src="/images/Java.png" alt="java-programs" style="width: 40px; height: 45px;">
-          <h2>Java Programs</h2>
-        </a>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 Adam Nix</p>
-  </footer>
-  <script src="script.js"></script>
+    <main class="container py-5">
+        <h1 class="text-center mb-5">Projects</h1>
+        <section class="welcome-container">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <img src="images/Python.png" alt="Python" class="mb-3" style="width: 40px; height: 40px;">
+                            <h5 class="card-title">Python Programs</h5>
+                            <p class="card-text">Explore my Python projects.</p>
+                            <a href="https://github.com/realadamnix/learn-python" target="_blank" class="btn btn-primary">View Projects</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <img src="images/CPP.png" alt="C++" class="mb-3" style="width: 40px; height: 40px;">
+                            <h5 class="card-title">C++ Programs</h5>
+                            <p class="card-text">Check out my C++ work.</p>
+                            <a href="https://github.com/realadamnix/learn-cplusplus" target="_blank" class="btn btn-primary">View Projects</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <img src="images/Java.png" alt="Java" class="mb-3" style="width: 40px; height: 40px;">
+                            <h5 class="card-title">Java Programs</h5>
+                            <p class="card-text">Discover my Java projects.</p>
+                            <a href="https://github.com/realadamnix/java-programs" target="_blank" class="btn btn-primary">View Projects</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="py-3 text-center">
+        <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
