--- a/thankyou.html
+++ b/thankyou.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Projects</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
     <header>
-        <h1>Thank You!</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Adam Nix</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item ms-2">
+                            <button id="dark-mode-toggle" class="btn btn-sm btn-outline-light">
+                                Light Mode
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
-        <section id="thank-you">
-            <h2>Your request has been submitted successfully!</h2>
-            <p>I appreciate your feedback and will get back to you shortly.</p>
-            <a href="index.html">Return back</a>
-        </section>
+
+    <main class="container min-vh-100 d-flex flex-column justify-content-center align-items-center">
+        <div class="card text-center">
+            <div class="card-body">
+                <h1 class="h2 mb-4">Thank You!</h1>
+                <p class="lead mb-4">Your message has been received. I will get back to you shortly.</p>
+                <a href="index.html" class="btn btn-primary">Return to Home</a>
+            </div>
+        </div>
     </main>
-    <footer>
-        <p>&copy; 2024 Adam Nix</p>
+
+    <footer class="py-3 text-center">
+        <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
