Update about.html to refine personal introduction and change Spotify track

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <div class="card mb-4">
             <div class="card-body">
                 <h2 class="h4 card-title">Hello!</h2>
-                <p class="card-text">I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work and connect with others.</p>
+                <p class="card-text">I am Adam, a Computer Networking student at TUS in Limerick. This website serves as a platform to display my work.</p>
             </div>
         </div>
         <div class="row g-4">
@@ -52,7 +52,7 @@
                     <div class="card-body">
                         <h2 class="h4 card-title">Song of the Month</h2>
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://open.spotify.com/embed/track/1mshGixz5e5ZXIUmeaDnWd?utm_source=generator" title="Spotify Embed" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://open.spotify.com/embed/track/0zo5H2QWXCkarmPSK2KJvH?utm_source=generator" title="Spotify Embed" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
