--- a/thankyou.html
+++ b/thankyou.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-VP8DWQGZ2M"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
@@ -10,26 +12,32 @@
         </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projects</title>
+        <title>Thank You - Adam Nix</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="about.html">Adam Nix</a>
+                <a class="navbar-brand" href="index.html">Adam Nix</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item ms-2">
-                            <button id="dark-mode-toggle" class="btn btn-sm btn-outline-light">
-                                Light Mode
+                            <button id="dark-mode-toggle" class="theme-toggle">
+                                <div class="toggle-icons">
+                                    <img src="images/sun.png" alt="Light Mode" class="sun-icon">
+                                    <img src="images/moon.png" alt="Dark Mode" class="moon-icon">
+                                </div>
+                                <div class="toggle-handle"></div>
                             </button>
                         </li>
                     </ul>
@@ -38,18 +46,35 @@
         </nav>
     </header>
 
-    <main class="container min-vh-100 d-flex flex-column justify-content-center align-items-center">
+    <main class="container min-vh-100 d-flex flex-column justify-content-center align-items-center py-5">
         <div class="card text-center">
-            <div class="card-body">
-                <h1 class="h2 mb-4">Thank You!</h1>
+            <div class="card-body p-5">
+                <i class="bi bi-check-circle-fill text-success display-1 mb-4"></i>
+                <h1 class="display-4 fw-bold mb-4">Thank You!</h1>
                 <p class="lead mb-4">Your message has been received. I will get back to you shortly.</p>
-                <a href="index.html" class="btn btn-primary">Return to Home</a>
+                <a href="index.html" class="btn btn-primary">
+                    <i class="bi bi-house me-2"></i>Return to Home
+                </a>
             </div>
         </div>
     </main>
 
-    <footer class="py-3 text-center">
-        <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+    <footer class="py-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="mb-0">&copy; 2025 Adam Nix. All rights reserved.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <a href="https://github.com/realadamnix" class="text-decoration-none me-3" target="_blank">
+                        <i class="bi bi-github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/realadamnix/" class="text-decoration-none" target="_blank">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
