Update index.html to reflect a more accurate description of the user as a Computer Networks and Systems Management Student.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="container py-5">
         <section class="hero-section text-center mb-5">
             <h1 class="display-4 fw-bold mb-4">Adam Nix</h1>
-            <p class="lead mb-4">Network Engineering Student</p>
+            <p class="lead mb-4">Computer Networks and Systems Management Student</p>
             <div class="d-flex justify-content-center gap-3 mb-5">
                 <a href="contact.html" class="btn btn-primary">
                     <i class="bi bi-envelope me-2"></i>Get in Touch
